--- a/styles.css
+++ b/styles.css
@@ -13,8 +13,11 @@ html {
 body {
     margin: 0;
     min-height: 100vh;
-    background: linear-gradient(135deg, black, rgb(39, 39, 39));
-    color: rgb(235, 235, 235);
+    background: url('https://www.explore.com/img/gallery/where-to-see-beautiful-cherry-blossoms-around-the-world/l-intro-1667778429.jpg');
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-size: cover;
+    color: rgb(255, 255, 255);
     line-height: 1.5;
 }
 
@@ -40,6 +43,7 @@ p {
 }
 
 #title, #attribution {
+    text-shadow: 2px 2px rgb(101, 101, 101);
     text-align: center;
 }
 
@@ -56,7 +60,7 @@ p {
 }
 
 .container {
-    background: rgba(255, 255, 255, 0.5);
+    background: rgba(255, 255, 255, 0.7);
     padding: 1.75rem;
     padding-bottom: 0;
     border-radius: 5px;
